python/tests/gold/hostsingle/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v2",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v2\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostsingle\",\"scope\":\"AmbassadorTest\"},\"name\":\"edgy-host\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"ACME\"},\"ambassador_id\":[\"hostsingle\"],\"hostname\":\"hostsingle\",\"selector\":{\"matchLabels\":{\"hostname\":\"edgy.example.com\"}},\"tlsSecret\":{\"name [...]
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-01-10T16:10:38Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostsingle",
                        "scope": "AmbassadorTest"
                    },
                    "name": "edgy-host",
                    "namespace": "default",
                    "resourceVersion": "51346",
                    "selfLink": "/apis/getambassador.io/v2/namespaces/default/hosts/edgy-host",
                    "uid": "bdafe199-33c3-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "ACME"
                    },
                    "ambassador_id": [
                        "hostsingle"
                    ],
                    "hostname": "hostsingle",
                    "selector": {
                        "matchLabels": {
                            "hostname": "edgy.example.com"
                        }
                    },
                    "tlsSecret": {
                        "name": "edgy-secret"
                    }
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": [
            {
                "apiVersion": "getambassador.io/v1",
                "kind": "Mapping",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v1\",\"kind\":\"Mapping\",\"metadata\":{\"annotations\":{},\"labels\":{\"hostname\":\"edgy.example.com\",\"kat-ambassador-id\":\"hostsingle\",\"scope\":\"AmbassadorTest\"},\"name\":\"edgy-target-mapping\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostsingle\"],\"prefix\":\"/target/\",\"service\":\"hostsingle-http\"}}\n"
                    },
                    "clusterName": "",
                    "creationTimestamp": "2020-01-10T16:10:38Z",
                    "generation": 1,
                    "labels": {
                        "hostname": "edgy.example.com",
                        "kat-ambassador-id": "hostsingle",
                        "scope": "AmbassadorTest"
                    },
                    "name": "edgy-target-mapping",
                    "namespace": "default",
                    "resourceVersion": "51348",
                    "selfLink": "/apis/getambassador.io/v1/namespaces/default/mappings/edgy-target-mapping",
                    "uid": "bdda718e-33c3-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "ambassador_id": [
                        "hostsingle"
                    ],
                    "prefix": "/target/",
                    "service": "hostsingle-http"
                }
            }
        ],
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": [
            {
                "apiVersion": "v1",
                "data": {
                    "tls.crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwakNDQW82Z0F3SUJBZ0lKQUpxa1Z4Y1RtQ1FITUEwR0NTcUdTSWIzRFFFQkN3VUFNR2d4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQklHQTFVRUN3d0xSVzVuYVc1bFpYSnBibWN4RWpBUUJnTlZCQU1NQ1d4dlkyRnNhRzl6CmREQWVGdzB4T0RFd01UQXhNREk1TURKYUZ3MHlPREV3TURjeE1ESTVNREphTUdneEN6QUpCZ05WQkFZVEFsVlQKTVFzd0NRWURWUVFJREFKTlFURVBNQTBHQTFVRUJ3d0dRbTl6ZEc5dU1SRXdEd1lEVlFRS0RBaEVZWFJoZDJs [...]
                    "tls.key": "LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQzZ1cHJ2eEN2VDdFK0cKdzdtSWVJUlRsYjI1ejh4TTlJejY3ckxzTlRqU3dUbkRvWnAzRVRhdkxFS3k1UUlMRzZkSnkxWHdtVVhiZkVjagphZ0JjZ1hocUZpcS8zWkFFTnBqNTY5RHc4Z1R2ZUQ4L0U4SzdkSm5TZzBsaFk3S3R2VFdrV1RnWTd2aXFYc3h2CmpZTXl0alBOeFppVms2bDd0dTlEb3ZjbzZIaFFzanR1NlVScUt5blFUa3EyOU1NOTdWbFQ0dk9GUzc2aVJJNUQKZ1ZIOWwrVU1LSjFtY2RpcWxBYy9RRVhsRTkrNlVFV0FRU3lCcUNiUEVqZXE5Y2RmcnJ0eXJ1YWlRcmdYWGg4 [...]
                },
                "kind": "Secret",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"tls.crt\":\"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwakNDQW82Z0F3SUJBZ0lKQUpxa1Z4Y1RtQ1FITUEwR0NTcUdTSWIzRFFFQkN3VUFNR2d4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQklHQTFVRUN3d0xSVzVuYVc1bFpYSnBibWN4RWpBUUJnTlZCQU1NQ1d4dlkyRnNhRzl6CmREQWVGdzB4T0RFd01UQXhNREk1TURKYUZ3MHlPREV3TURjeE1ESTVNREphTUdneEN6QUpCZ05WQkFZ [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:17Z",
                    "labels": {
                        "kat-ambassador-id": "hostsingle",
                        "scope": "AmbassadorTest"
                    },
                    "name": "edgy-secret",
                    "namespace": "default",
                    "resourceVersion": "59626",
                    "selfLink": "/api/v1/namespaces/default/secrets/edgy-secret",
                    "uid": "d6eb794c-33c9-11ea-966c-16b58b03f3a1"
                },
                "type": "kubernetes.io/tls"
            }
        ],
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"hostsingle\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostsingle\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\ [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:16Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "hostsingle",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostsingle",
                    "namespace": "default",
                    "resourceVersion": "59614",
                    "selfLink": "/api/v1/namespaces/default/services/hostsingle",
                    "uid": "d6850d42-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.99.153.240",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 32715,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 30614,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "hostsingle"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostsingle\",\"scope\":\"AmbassadorTest\",\"service\":\"hostsingle-admin\"},\"name\":\"hostsingle-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"hostsingle-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"hostsingle\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-10T16:54:17Z",
                    "labels": {
                        "kat-ambassador-id": "hostsingle",
                        "scope": "AmbassadorTest",
                        "service": "hostsingle-admin"
                    },
                    "name": "hostsingle-admin",
                    "namespace": "default",
                    "resourceVersion": "59620",
                    "selfLink": "/api/v1/namespaces/default/services/hostsingle-admin",
                    "uid": "d6c59a0f-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.108.73.197",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "hostsingle-admin",
                            "nodePort": 31665,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "hostsingle"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostsingle\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostsingle-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8100},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8463}],\"selector\":{\"backend\":\"superpod-defa [...]
                    },
                    "creationTimestamp": "2020-01-10T16:54:17Z",
                    "labels": {
                        "kat-ambassador-id": "hostsingle",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostsingle-http",
                    "namespace": "default",
                    "resourceVersion": "59631",
                    "selfLink": "/api/v1/namespaces/default/services/hostsingle-http",
                    "uid": "d719957d-33c9-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.105.36.150",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8100
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8463
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
